Fix scrollbar that appear for no reason in md-group-tab on character component

--- a/src/app/character/character.component.scss
+++ b/src/app/character/character.component.scss
@@ -20,6 +20,8 @@ md-card {
 
 .info-tab {
     font-size: large;
+    display: flex;
+    flex-direction: column;
     md-card {
         margin: 5px;
     }
